upon loading, page displays empty general project

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,27 @@
     <title>To-Do-List</title>
 </head>
 <body>
-    <div></div>
+    <div id="appName"> 
+        <h2>Todo's to do</h2>
+    </div>
+    <div id="mainContent">
+        <div id="sidebar">
+
+        </div>
+        <div id="projects">
+            <!-- need to generate with javascript -->
+            <div id='key'>
+                <div id='todos'>
+                    <span>todo item</span> <!-- unordered list of todo items? -->
+                    <div id='form'> 
+                        <!-- this is where the form will be generated -->
+                        <button id='submit'></button>
+                    </div>
+                    <button id='newToDo'></button>
+                </div>
+            </div>
+            <!-- need to generate with javascript -->
+        </div>
+    </div>
 </body>
 </html>
