add new project button in sidebar. form is generated, submits and adds to array

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     </div>
     <div id="mainContent">
         <div id="sidebar">
-
+            <button id="addproject" type="button">Add a Project</button>
         </div>
         <div id="projects">
             
