--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,8 @@
     <div id="mainContent">
         <div id="sidebar">
             <button id="addproject" type="button">Add a Project</button>
+            <button id="deleteprojects" type="button">Select Projects To Delete</button>
+            <button id="deleteallprojects" type="button">Delete All Projects</button>
         </div>
         <div id="projects">
             
